--- a/templates/base.html
+++ b/templates/base.html
@@ -9,44 +9,21 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('index') }}">
                 <i class="fas fa-bus"></i> Transmilenio Security
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">
-                            <i class="fas fa-home"></i> Inicio
-                        </a>
-                    </li>
-                    {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('dashboard') }}">
-                            <i class="fas fa-map-marked-alt"></i> Mapa de Incidentes
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('report_incident') }}">
-                            <i class="fas fa-exclamation-triangle"></i> Reportar Incidente
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('predictions') }}">
-                            <i class="fas fa-bell"></i> Predicciones
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('statistics') }}">
-                            <i class="fas fa-chart-bar"></i> Estadísticas
-                        </a>
-                    </li>
-                    {% endif %}
-                </ul>
+            {% if not current_user.is_authenticated %}
+            <div class="d-flex">
+                <a class="btn btn-outline-light me-2" href="{{ url_for('login') }}">
+                    <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
+                </a>
+                <a class="btn btn-light" href="{{ url_for('register') }}">
+                    <i class="fas fa-user-plus"></i> Registrarse
+                </a>
+            </div>
+            {% endif %}
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
                     <li class="nav-item dropdown">
@@ -103,6 +80,32 @@
         {% block content %}{% endblock %}
     </div>
 
+    {% if current_user.is_authenticated %}
+    <nav class="navbar fixed-bottom navbar-dark bg-dark bottom-nav">
+        <div class="container-fluid">
+            <a class="nav-link text-center" href="{{ url_for('index') }}">
+                <i class="fas fa-home"></i>
+                <span class="d-block small">Inicio</span>
+            </a>
+            <a class="nav-link text-center" href="{{ url_for('dashboard') }}">
+                <i class="fas fa-map-marked-alt"></i>
+                <span class="d-block small">Mapa</span>
+            </a>
+            <a class="nav-link text-center" href="{{ url_for('report_incident') }}">
+                <i class="fas fa-exclamation-triangle"></i>
+                <span class="d-block small">Reportar</span>
+            </a>
+            <a class="nav-link text-center" href="{{ url_for('predictions') }}">
+                <i class="fas fa-bell"></i>
+                <span class="d-block small">Alertas</span>
+            </a>
+            <a class="nav-link text-center" href="{{ url_for('statistics') }}">
+                <i class="fas fa-chart-bar"></i>
+                <span class="d-block small">Stats</span>
+            </a>
+        </div>
+    </nav>
+    {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     {% block scripts %}{% endblock %}
