--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,8 @@
+
 {% extends "base.html" %}
 
 {% block content %}
-<div class="mobile-container">
-    <header class="dark-header">
-        <h1>Transmilenio Security</h1>
-    </header>
-
-    <main class="dark-main">
-        <div class="dark-auth">
-            <a href="{{ url_for('login') }}" class="dark-button">
-                <i class="fas fa-sign-in-alt"></i>
-                Iniciar Sesión
-            </a>
-            <a href="{{ url_for('register') }}" class="dark-button">
-                <i class="fas fa-user-plus"></i>
-                Registrarse
-            </a>
-        </div>
-    </main>
-</div>
+<script>
+    window.location.href = "{{ url_for('login') }}";
+</script>
 {% endblock %}
