--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="{{ url_for('index') }}">
                 <i class="fas fa-bus"></i> Transmilenio Security
             </a>
-            {% if not current_user.is_authenticated %}
+            {% if not current_user.is_authenticated and request.endpoint not in ['login', 'register'] %}
             <div class="d-flex">
                 <a class="btn btn-outline-light me-2" href="{{ url_for('login') }}">
                     <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
